fix: z-index circular slider

--- a/src/components/TimePeriod/CircularSlider/CircularSlider.module.scss
+++ b/src/components/TimePeriod/CircularSlider/CircularSlider.module.scss
@@ -4,6 +4,7 @@
   user-select: none;
 
   position: absolute;
+  z-index: 10;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
